Identified the culprit to safari layout issues and employed a different fix

--- a/app/assets/stylesheets/layouts.scss
+++ b/app/assets/stylesheets/layouts.scss
@@ -43,7 +43,6 @@
  */
 .section-content.column .segment {
   @include padding-vertical;
-  margin-right: -1px; // safari workaround
 }
 .section-content.block,
 .section-content.column,
@@ -58,7 +57,6 @@
 }
 .section-content.block .segment {
   @include padding-horizontal(0);
-  margin-right: -1px; // safari workaround
 }
 .section-content.column.spread > .row {
   margin-left: 0;
@@ -176,7 +174,7 @@
 /* With fluid aspect ratio, alignment happens within the .row */
 .section-content.column.fluid-ratio > .row {
   display: flex;
-  flex-flow: row wrap;
+  flex-flow: row nowrap;
 
   .segment.align-top { align-self: flex-start; }
   .segment.align-middle { align-self: center; }
